# MIDI-to-sound

./: README.md  pyproject.toml
docs/: PLAN.md
src/: cli.py  core.py  logging.py
