[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MIDItosound"
dynamic = ["version"]
description = "Convert MIDI files to a MP3 with a soundfont file."
authors = [
    {name = "James David Clarke", email = "james@jamesdavidclarke.com"},
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "python-dotenv",
    "coloredlogs",
    "appdirs",
    "mido",
    "midi2audio",
    "pydub",
    "numpy",
    "scipy"
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/JamesClarke7283/MIDI-to-sound"
"Bug Tracker" = "https://github.com/JamesClarke7283/MIDI-to-sound/issues"

[tool.setuptools]
packages = ["src"]

[project.scripts]
miditosound = "src.cli:main"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true